[gd_scene load_steps=3 format=3 uid="uid://2frm44tx2t42"]

[ext_resource type="LabelSettings" uid="uid://bsl6rvqnb80np" path="res://font/sh_24_white.tres" id="1_ioc7h"]
[ext_resource type="Script" path="res://scenes/gameover/game_over.gd" id="1_y5jtv"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y5jtv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="goLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"
label_settings = ExtResource("1_ioc7h")

[node name="pressSpace" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Press Space
To Start "
label_settings = ExtResource("1_ioc7h")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
